force-app/main/default/objects/Form_1_Status__c/fields/Date_of_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Status__c</fullName>
    <label>Date of Status</label>
    <type>Date</type>
</CustomField>