force-app/main/default/objects/Form_1_Status__c/fields/Form1_Status_Type__c.field-meta.xml
<CustomField>
    <fullName>Form1_Status_Type__c</fullName>
    <label>Form1 Status Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertise</fullName>
            </value>
            <value>
                <fullName>CalHR - Approved</fullName>
            </value>
            <value>
                <fullName>CalHR - Denied</fullName>
            </value>
            <value>
                <fullName>CalHR - Hold</fullName>
            </value>
            <value>
                <fullName>CalHR - Received</fullName>
            </value>
            <value>
                <fullName>CalHR - Under Review</fullName>
            </value>
            <value>
                <fullName>Canceled by Division</fullName>
            </value>
            <value>
                <fullName>Canceled by HR</fullName>
            </value>
            <value>
                <fullName>Candidate Accepts</fullName>
            </value>
            <value>
                <fullName>Candidate Declined - Other</fullName>
            </value>
            <value>
                <fullName>Candidate Declined - Other Offer</fullName>
            </value>
            <value>
                <fullName>Candidate Declined - Salary</fullName>
            </value>
            <value>
                <fullName>HR Final Packet - Analyst Approved</fullName>
            </value>
            <value>
                <fullName>HR Final Packet - Manager Approved</fullName>
            </value>
            <value>
                <fullName>HR Final Packet - Submitted to CalHR</fullName>
            </value>
            <value>
                <fullName>HR Hold</fullName>
            </value>
            <value>
                <fullName>HR - Job Offer Clearance Notification</fullName>
            </value>
            <value>
                <fullName>Info Hold - Duty statement</fullName>
            </value>
            <value>
                <fullName>Info Hold - Eligibility  see HR Hold</fullName>
            </value>
            <value>
                <fullName>Info Hold - Interview Questions</fullName>
            </value>
            <value>
                <fullName>Info Hold - Job Bulletin</fullName>
            </value>
            <value>
                <fullName>Info Hold - Justification</fullName>
            </value>
            <value>
                <fullName>Info Hold - Knowledge, Skills, Abilities</fullName>
            </value>
            <value>
                <fullName>Info Hold - Org chart</fullName>
            </value>
            <value>
                <fullName>Info Hold - Other</fullName>
            </value>
            <value>
                <fullName>Info Hold - Screening Matrix</fullName>
            </value>
            <value>
                <fullName>Info Hold - Statement of Qualifications</fullName>
            </value>
            <value>
                <fullName>Interviews - Conducted</fullName>
            </value>
            <value>
                <fullName>Interviews - Scheduled</fullName>
            </value>
            <value>
                <fullName>Job Offered to Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>