force-app/main/default/objects/Form_1_Status__c/fields/Max_F1_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Max_F1_Status_Flag__c</fullName>
    <description>Max last modified to shown on report</description>
    <formula>IF(((   Date_of_Status__c =    Form_1__r.Max_F1_Status_Date__c ) ), &quot;1&quot;, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max F1 Status Flag</label>
    <type>Text</type>
</CustomField>