force-app/main/default/objects/Form_1_Status__c/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <label>Status Notes</label>
    <type>TextArea</type>
</CustomField>