force-app/main/default/objects/Form_1_Status__c/validationRules/No_Future_Date_for_Date_Of_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Date_for_Date_Of_Status</fullName>
    <active>true</active>
    <description>No_Future_Date_for_Date_Of_Status</description>
    <errorConditionFormula>Date_of_Status__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Please enter a date equal to or before today&#39;s date.</errorMessage>
</ValidationRule>